Ajustando el svg para el README v2

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,64 @@
+################################################
+# Sistema
+###############################################
 .Spotlight-V100/
+.DS_Store
 .Trashes/
+.Temporary_Items/
+.DocumentRevisions-V100/
+.fsenventsd/
+
+
+##############################################
+# Python
+#############################################
+__pycache__/
+*.py[cod]
+.venv/
+venv/
+
+##############################################
+# IDE
+##############################################
+.vscode/
+.ide/
+
+#############################################
+## Logs y runtime
+############################################
+*.log
+*.pid
+
+############################################
+# Datos descargados / BOE
+############################################
+data/raw/
+data/cache/
+data/tmp/
+
+
+
+###########################################
+# Carpetas no indexadas
+##########################################
 gateway/
+
+
+############################################
+# Bases de datos locales
+############################################
+*.db
+*.sqlite
+postgres-data/
+neo4j-data/
+minio-data/
+
+############################################
+# Secrets (CRITICO)
+###########################################
+.env
+.env.*
+*.key
+*.pem
+*.crt
+secrets/
